--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -110,7 +110,7 @@
   <string name="DELETE_SURE">Möchten Sie es löschen?</string>
   <string name="DELETE_THEME">Löschen</string>
   <string name="DELETE_THEME_XX">Sind Sie sicher, den Ort %s zu löschen?</string>
-  <string name="DETECTED_AI">Erkannt</string>
+  <string name="DETECTED_AI">Entdecken</string>
   <string name="DEVICE">Gerät</string>
   <string name="DEVICES_TIPS_TEXT">Schritte:\n1. Gerät mit Internet verbunden \n2. registrieren und CID aktivieren \n3. mit aktuellem Account verbinden</string>
   <string name="DEVICES_TITLE">Geräte hinzufügen</string>
@@ -396,6 +396,28 @@
   <string name="MAGNETISM_ON">Geöffnet</string>
   <string name="MAGNETISM_ON_PUSH">%s open</string>
   <string name="MESSAGE">Meldungen</string>
+  <string name="MESSAGES_ADD_FACE_TIPS">Setzen Sie erfolgreich, es wird hinzugefügt, um die Check-Gesicht \"Gesicht Management\"</string>
+  <string name="MESSAGES_DELETE_FACE_BTN">Gesicht entfernen</string>
+  <string name="MESSAGES_DELETE_FACE_MES">Löschen Gesicht und Nachrichten</string>
+  <string name="MESSAGES_DELETE_FCAE_POP">Löschen Sie das Gesicht?</string>
+  <string name="MESSAGES_DELETE_ICON_BTN">Symbol entfernen</string>
+  <string name="MESSAGES_DELETE_ICON_MES">Symbol und Nachrichten löschen</string>
+  <string name="MESSAGES_DELETE_ICON_POP">Löschen Sie das Symbol und alle zugehörigen Nachrichten? Nach dem Löschen wird auch die Nachricht unter anderen Optionen gelöscht</string>
+  <string name="MESSAGES_DELETE_POP">Löschen Sie das Gesicht und alle zugehörigen Nachrichten? Nach dem Löschen wird auch die Nachricht unter anderen Optionen gelöscht</string>
+  <string name="MESSAGES_FACE_IDENTIFY">Identifizieren</string>
+  <string name="MESSAGES_FACE_INFO">Gesicht Informationen</string>
+  <string name="MESSAGES_FACE_MABAGE">Gesicht Management</string>
+  <string name="MESSAGES_FACE_MOVE">Gehen Sie zu einem bestehenden Gesicht</string>
+  <string name="MESSAGES_FACE_MOVE_BTN">ziehen nach</string>
+  <string name="MESSAGES_FACE_NONE">Kein Gesicht</string>
+  <string name="MESSAGES_FILTER_ALL">Alle</string>
+  <string name="MESSAGES_FILTER_STRANGER">Fremder</string>
+  <string name="MESSAGES_IDENTIFY_ADD_BTN">In dem bestehenden Gesicht</string>
+  <string name="MESSAGES_IDENTIFY_CREATE_BTN">Neues Gesicht</string>
+  <string name="MESSAGES_IDENTIFY_POP">Neues Gesicht oder durch zu einem bestehenden Gesicht Zugabe, verbessert die Genauigkeit der Gesichtserkennung</string>
+  <string name="MESSAGES_TIME_DAY">Vor %s Tag</string>
+  <string name="MESSAGES_TIME_HOUR">vor %s Std</string>
+  <string name="MESSAGES_TIME_MIN">Vor %s min</string>
   <string name="MINUTE">M</string>
   <string name="MINUTE_Cloud">min</string>
   <string name="MOBILE_DATA">Mobile Datennetz</string>
@@ -638,7 +660,7 @@
   <string name="SETTING_FREE">Bewegungserkennung und Alarm vom Einzelgerät einstellen</string>
   <string name="SETTING_RECORD">Video-Einstellungen</string>
   <string name="SETTING_SD">Micro SD-Karte</string>
-  <string name="SETTING_SECURE_AI">AI Anerkennung</string>
+  <string name="SETTING_SECURE_AI">Objekterkennung</string>
   <string name="SETTING_TIMEZONE">Zeitzone einstellen</string>
   <string name="SET_NEW_PWD">Neues Passwort erstellen</string>
   <string name="SET_PHOTO_FAIL">Photo fehlgeschlagen eingestellt</string>
@@ -1044,6 +1066,7 @@
   <string name="USER_NAME">Benutzernamen bitte eingeben</string>
   <string name="USE_HELP">Verwenden der Hilfe</string>
   <string name="Unconnect_Network">Ihr Gerät ist nicht mit einem Mobilfunknetz oder einem WiFi-Netzwerk verbunden</string>
+  <string name="Unicam720_TIMEOUT_BANNER">Langsame Verbindung, bitte wiederholen</string>
   <string name="VALID_STORAGE">Speicher</string>
   <string name="VIDEO_FirmwareUpdating">Firmware Updating&#8230;</string>
   <string name="VIDEO_REFRESHING">Wird geladen, einen Moment bitte</string>
@@ -1081,6 +1104,7 @@
   <string name="WIFI_SET_5GTIPS">Hinweis:Unterstützt nicht die 5GHz WiFi</string>
   <string name="WIFI_SET_RS">Bitte \"RS-CAM-******\" in Einstellung vom phone->WLAN wählen,wenn Passwort erforderlich, bitte 11111111 eingeben</string>
   <string name="WIFI_SET_VER">Bitte \"%s\" in Einstellung vom phone->WLAN wählen,wenn Passwort erforderlich, bitte 11111111 eingeben</string>
+  <string name="WIRED_MODE_CONNECTED">Verbunden</string>
   <string name="WONDER_TODAY_H_M">Heute HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">Gestern HH:mm</string>
   <string name="WeChat">WeChat</string>
