--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -110,7 +110,7 @@
   <string name="DELETE_SURE">¿Está seguro de que quiere eliminar?</string>
   <string name="DELETE_THEME">Borrar localización</string>
   <string name="DELETE_THEME_XX">Seguro de borrar la %s ?</string>
-  <string name="DETECTED_AI">Detectado</string>
+  <string name="DETECTED_AI">Descubrir</string>
   <string name="DEVICE">Dispositivo</string>
   <string name="DEVICES_TIPS_TEXT">Se necesita en este paso:\n1. Dispositivo conectado a Internet \n2.Inscribir y activar CID \n3.Enlazado con la cuenta actual</string>
   <string name="DEVICES_TITLE">Añadir Dispositivos</string>
@@ -396,6 +396,28 @@
   <string name="MAGNETISM_ON">Abra el</string>
   <string name="MAGNETISM_ON_PUSH">%s abre</string>
   <string name="MESSAGE">Mensaje</string>
+  <string name="MESSAGES_ADD_FACE_TIPS">Establecer con éxito, se agregará a la cara de control \"Gestión facial\"</string>
+  <string name="MESSAGES_DELETE_FACE_BTN">Quitar la cara</string>
+  <string name="MESSAGES_DELETE_FACE_MES">Eliminar la cara y los mensajes</string>
+  <string name="MESSAGES_DELETE_FCAE_POP">¿Eliminar la cara?</string>
+  <string name="MESSAGES_DELETE_ICON_BTN">Eliminar icono</string>
+  <string name="MESSAGES_DELETE_ICON_MES">Eliminar icono y mensajes</string>
+  <string name="MESSAGES_DELETE_ICON_POP">¿Eliminar el icono y todos los mensajes relacionados? Después de borrado, el mensaje bajo otras opciones también se eliminará</string>
+  <string name="MESSAGES_DELETE_POP">¿Eliminar la cara y todos los mensajes relacionados? Después de borrado, el mensaje bajo otras opciones también se eliminará</string>
+  <string name="MESSAGES_FACE_IDENTIFY">Identificar</string>
+  <string name="MESSAGES_FACE_INFO">Información de cara</string>
+  <string name="MESSAGES_FACE_MABAGE">Gestión facial</string>
+  <string name="MESSAGES_FACE_MOVE">Mover a una cara existente</string>
+  <string name="MESSAGES_FACE_MOVE_BTN">mover a</string>
+  <string name="MESSAGES_FACE_NONE">No cara</string>
+  <string name="MESSAGES_FILTER_ALL">Todas</string>
+  <string name="MESSAGES_FILTER_STRANGER">Desconocido</string>
+  <string name="MESSAGES_IDENTIFY_ADD_BTN">Añadir a la cara existente</string>
+  <string name="MESSAGES_IDENTIFY_CREATE_BTN">Nueva cara</string>
+  <string name="MESSAGES_IDENTIFY_POP">La nueva cara, o agregando a una cara existente, mejora la exactitud del reconocimiento facial</string>
+  <string name="MESSAGES_TIME_DAY">Hace %s día</string>
+  <string name="MESSAGES_TIME_HOUR">Hace %s h</string>
+  <string name="MESSAGES_TIME_MIN">Hace %s min</string>
   <string name="MINUTE">M</string>
   <string name="MINUTE_Cloud">minutos</string>
   <string name="MOBILE_DATA">red de datos móviles</string>
@@ -638,7 +660,7 @@
   <string name="SETTING_FREE">Ajuste de la alarma y la detección del movimiento de cada dispositivo individual como quiera</string>
   <string name="SETTING_RECORD">Ajustes de video</string>
   <string name="SETTING_SD">Tarjeta Micro SD</string>
-  <string name="SETTING_SECURE_AI">Reconocimiento de AI</string>
+  <string name="SETTING_SECURE_AI">Reconocimiento de objetos</string>
   <string name="SETTING_TIMEZONE">Zona horaria</string>
   <string name="SET_NEW_PWD">Crear nueva contraseña</string>
   <string name="SET_PHOTO_FAIL">Ajuste de perfil fracasado</string>
@@ -1044,6 +1066,7 @@
   <string name="USER_NAME">Introduzca el mote</string>
   <string name="USE_HELP">Ayuda</string>
   <string name="Unconnect_Network">Su dispositivo no está conectado a una red móvil oa una red WiFi</string>
+  <string name="Unicam720_TIMEOUT_BANNER">Conexión lenta, vuelva a intentarlo</string>
   <string name="VALID_STORAGE">Almacenamiento disponible</string>
   <string name="VIDEO_FirmwareUpdating">Actualización de firmware&#8230;</string>
   <string name="VIDEO_REFRESHING">Cargando, espere un momento</string>
@@ -1081,6 +1104,7 @@
   <string name="WIFI_SET_5GTIPS">Nota:No es compatible con el WiFi 5G</string>
   <string name="WIFI_SET_RS">Ajustes de phone ->Red de área local inalámbrica,elija RS-CAM****** entre,si necesitan contraseña, introduzca 11111111</string>
   <string name="WIFI_SET_VER">Ajustes de phone ->Red de área local inalámbrica,elija %s entre,si necesitan contraseña, introduzca 11111111</string>
+  <string name="WIRED_MODE_CONNECTED">Conectado</string>
   <string name="WONDER_TODAY_H_M">Hoy HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">Ayer HH:mm</string>
   <string name="WeChat">WeChat</string>
