--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -110,7 +110,7 @@
   <string name="DELETE_SURE">Vous êtes sûr de vouloir supprimer ?</string>
   <string name="DELETE_THEME">Supprimer</string>
   <string name="DELETE_THEME_XX">Vous êtes sûr de vouloir supprimer %s ?</string>
-  <string name="DETECTED_AI">Détecté</string>
+  <string name="DETECTED_AI">Découvrir</string>
   <string name="DEVICE">Dispositif</string>
   <string name="DEVICES_TIPS_TEXT">Ce processus a besoin:\n 1 l\'appareil connecté au réseau \n 2 enregistrer et activer le CID \n 3 liaison avec le compte actuel</string>
   <string name="DEVICES_TITLE">Ajouter un appareil</string>
@@ -396,6 +396,28 @@
   <string name="MAGNETISM_ON">Ouvrir</string>
   <string name="MAGNETISM_ON_PUSH">%s ouvert</string>
   <string name="MESSAGE">Messages</string>
+  <string name="MESSAGES_ADD_FACE_TIPS">Définir avec succès, il sera ajouté à la vérification face \"Gestion du visage\"</string>
+  <string name="MESSAGES_DELETE_FACE_BTN">Retirez le visage</string>
+  <string name="MESSAGES_DELETE_FACE_MES">Supprimer la face et les messages</string>
+  <string name="MESSAGES_DELETE_FCAE_POP">Supprimer le visage?</string>
+  <string name="MESSAGES_DELETE_ICON_BTN">Supprimer l\'icône</string>
+  <string name="MESSAGES_DELETE_ICON_MES">Supprimer l\'icône et les messages</string>
+  <string name="MESSAGES_DELETE_ICON_POP">Supprimez l\'icône et tous les messages connexes? Après avoir été supprimé, le message sous d\'autres options sera également supprimé.</string>
+  <string name="MESSAGES_DELETE_POP">Supprimez le visage et tous les messages connexes? Après avoir été supprimé, le message sous d\'autres options sera également supprimé.</string>
+  <string name="MESSAGES_FACE_IDENTIFY">Identifier</string>
+  <string name="MESSAGES_FACE_INFO">information du visage</string>
+  <string name="MESSAGES_FACE_MABAGE">Gestion du visage</string>
+  <string name="MESSAGES_FACE_MOVE">Passer à un visage existant</string>
+  <string name="MESSAGES_FACE_MOVE_BTN">déménager à</string>
+  <string name="MESSAGES_FACE_NONE">Pas de visage</string>
+  <string name="MESSAGES_FILTER_ALL">Tout</string>
+  <string name="MESSAGES_FILTER_STRANGER">Étranger</string>
+  <string name="MESSAGES_IDENTIFY_ADD_BTN">Ajouter au visage existant</string>
+  <string name="MESSAGES_IDENTIFY_CREATE_BTN">Nouveau visage</string>
+  <string name="MESSAGES_IDENTIFY_POP">Nouveau visage, ou en ajoutant à un visage existant, améliorer la précision de la reconnaissance faciale</string>
+  <string name="MESSAGES_TIME_DAY">il y a %s jour</string>
+  <string name="MESSAGES_TIME_HOUR">il y a %s h</string>
+  <string name="MESSAGES_TIME_MIN">il y a %s min</string>
   <string name="MINUTE">M</string>
   <string name="MINUTE_Cloud">minutes</string>
   <string name="MOBILE_DATA">réseau de données mobile</string>
@@ -638,7 +660,7 @@
   <string name="SETTING_FREE">Activer la détection de mouvement et l\'alarme d\'un appareil</string>
   <string name="SETTING_RECORD">Paramètres vidéo</string>
   <string name="SETTING_SD">Carte Micro SD</string>
-  <string name="SETTING_SECURE_AI">Reconnaissance AI</string>
+  <string name="SETTING_SECURE_AI">Reconnaissance d\'objet</string>
   <string name="SETTING_TIMEZONE">Fuseau Horaire</string>
   <string name="SET_NEW_PWD">Définir le nouveau mot de passe</string>
   <string name="SET_PHOTO_FAIL">Échec transfert photo</string>
@@ -1044,6 +1066,7 @@
   <string name="USER_NAME">Saisir un pseudo</string>
   <string name="USE_HELP">Aide</string>
   <string name="Unconnect_Network">Votre appareil n\'est pas connecté à un réseau mobile ou à un réseau WiFi</string>
+  <string name="Unicam720_TIMEOUT_BANNER">réseau médiocre, la vitesse doit être 40kb/s au moins</string>
   <string name="VALID_STORAGE">Stockage disponible</string>
   <string name="VIDEO_FirmwareUpdating">Mise à jour du firmware&#8230;</string>
   <string name="VIDEO_REFRESHING">Chargement</string>
@@ -1081,6 +1104,7 @@
   <string name="WIFI_SET_5GTIPS">Note:Ne supporte pas le WiFi 5G</string>
   <string name="WIFI_SET_RS">Sur l\'phone via Réglages->WLAN, se connecter à RS-CAM-******, mot de passe 11111111</string>
   <string name="WIFI_SET_VER">Sur l\'phone via Réglages->WLAN, se connecter à %s, mot de passe 11111111</string>
+  <string name="WIRED_MODE_CONNECTED">Connecté</string>
   <string name="WONDER_TODAY_H_M">Aujourd\'hui HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">Hier HH:mm</string>
   <string name="WeChat">WeChat</string>
