--- a/app/src/main/res/values-in-rID/strings.xml
+++ b/app/src/main/res/values-in-rID/strings.xml
@@ -110,7 +110,7 @@
   <string name="DELETE_SURE">Apakah anda yakin akan menghapus ?</string>
   <string name="DELETE_THEME">Hapus</string>
   <string name="DELETE_THEME_XX">Anda yakin mau menghapus %s?</string>
-  <string name="DETECTED_AI">Terdeteksi</string>
+  <string name="DETECTED_AI">Menemukan</string>
   <string name="DEVICE">Perangkat</string>
   <string name="DEVICES_TIPS_TEXT">Proses ini membutuhkan:\n1 . Perangkat yang terhubung ke jaringan \n2. Pendaftaran dan CID Aktif \n3. Dengan Akun yang terhubung</string>
   <string name="DEVICES_TITLE">Tambah perangkat</string>
@@ -396,6 +396,28 @@
   <string name="MAGNETISM_ON">Buka</string>
   <string name="MAGNETISM_ON_PUSH">%s sedang buka</string>
   <string name="MESSAGE">Pesan</string>
+  <string name="MESSAGES_ADD_FACE_TIPS">Set berhasil, itu akan ditambahkan ke cek wajah \"Manajemen wajah\"</string>
+  <string name="MESSAGES_DELETE_FACE_BTN">Hapus wajah</string>
+  <string name="MESSAGES_DELETE_FACE_MES">Hapus wajah dan pesan</string>
+  <string name="MESSAGES_DELETE_FCAE_POP">Hapus wajah?</string>
+  <string name="MESSAGES_DELETE_ICON_BTN">Hapus ikon</string>
+  <string name="MESSAGES_DELETE_ICON_MES">Hapus ikon dan pesan</string>
+  <string name="MESSAGES_DELETE_ICON_POP">Hapus ikon dan semua pesan terkait? Setelah dihapus, pesan di bawah pilihan lain juga akan dihapus</string>
+  <string name="MESSAGES_DELETE_POP">Hapus wajah dan semua pesan terkait? Setelah dihapus, pesan di bawah pilihan lain juga akan dihapus</string>
+  <string name="MESSAGES_FACE_IDENTIFY">Mengenali</string>
+  <string name="MESSAGES_FACE_INFO">Informasi wajah</string>
+  <string name="MESSAGES_FACE_MABAGE">Manajemen wajah</string>
+  <string name="MESSAGES_FACE_MOVE">Pindah ke wajah yang ada</string>
+  <string name="MESSAGES_FACE_MOVE_BTN">pindah ke</string>
+  <string name="MESSAGES_FACE_NONE">Tanpa muka</string>
+  <string name="MESSAGES_FILTER_ALL">Semua</string>
+  <string name="MESSAGES_FILTER_STRANGER">Orang asing</string>
+  <string name="MESSAGES_IDENTIFY_ADD_BTN">Tambahkan ke wajah yang ada</string>
+  <string name="MESSAGES_IDENTIFY_CREATE_BTN">Wajah baru</string>
+  <string name="MESSAGES_IDENTIFY_POP">Wajah baru, atau dengan menambah wajah yang ada, meningkatkan akurasi pengenalan wajah</string>
+  <string name="MESSAGES_TIME_DAY">%s hari yang lalu</string>
+  <string name="MESSAGES_TIME_HOUR">%s j yang lalu</string>
+  <string name="MESSAGES_TIME_MIN">%s m yang lalu</string>
   <string name="MINUTE">Menit</string>
   <string name="MINUTE_Cloud">menit</string>
   <string name="MOBILE_DATA">jaringan data seluler</string>
@@ -638,7 +660,7 @@
   <string name="SETTING_FREE">Set deteksi gerak dan alarm perangkat</string>
   <string name="SETTING_RECORD">Pengaturan video</string>
   <string name="SETTING_SD">Kartu Micro SD</string>
-  <string name="SETTING_SECURE_AI">Pengakuan AI</string>
+  <string name="SETTING_SECURE_AI">Pengenalan objek</string>
   <string name="SETTING_TIMEZONE">Zona waktu</string>
   <string name="SET_NEW_PWD">Set Kata sandi baru</string>
   <string name="SET_PHOTO_FAIL">Upload gagal</string>
@@ -1044,6 +1066,7 @@
   <string name="USER_NAME">Nama pengguna</string>
   <string name="USE_HELP">Bantuan</string>
   <string name="Unconnect_Network">Perangkat Anda tidak terhubung ke jaringan selular atau jaringan WiFi</string>
+  <string name="Unicam720_TIMEOUT_BANNER">Miskin jaringan, kecepatan harus 40kb/s setidaknya</string>
   <string name="VALID_STORAGE">Penyimpanan Valid</string>
   <string name="VIDEO_FirmwareUpdating">Firmware updating&#8230;</string>
   <string name="VIDEO_REFRESHING">Sedang memuat</string>
@@ -1081,6 +1104,7 @@
   <string name="WIFI_SET_5GTIPS">Tips:Sinyal 5G WIFI tidak memungkinkan sekarang</string>
   <string name="WIFI_SET_RS">Silahkan melalui \"Pengaturan\"->\"WLAN\", pilih \"RS-CAM-******\" sambungkan ke phone anda, kata sandinya adalah 11111111</string>
   <string name="WIFI_SET_VER">Silahkan melalui \"Pengaturan\"->\"WLAN\", pilih \"%s\" sambungkan ke phone anda, kata sandinya adalah 11111111</string>
+  <string name="WIRED_MODE_CONNECTED">Terhubung</string>
   <string name="WONDER_TODAY_H_M">Hari ini HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">Kemarin HH:mm</string>
   <string name="WeChat">WeChat</string>
