--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -110,7 +110,7 @@
   <string name="DELETE_SURE">Sei sicuro di voler cancellara?</string>
   <string name="DELETE_THEME">Cancella</string>
   <string name="DELETE_THEME_XX">Sei sicuro di eliminare %s ?</string>
-  <string name="DETECTED_AI">Rilevato</string>
+  <string name="DETECTED_AI">Scoprire</string>
   <string name="DEVICE">Dispositivo</string>
   <string name="DEVICES_TIPS_TEXT">Questo fase richiede:\n 1.Dispositivo connesso alla rete WiFi\n 2.Registrare e attivare un account \n 3.Inserire l\'account.</string>
   <string name="DEVICES_TITLE">Aggiungi Dispositivo</string>
@@ -396,6 +396,28 @@
   <string name="MAGNETISM_ON">Aperto</string>
   <string name="MAGNETISM_ON_PUSH">%s è aperto</string>
   <string name="MESSAGE">Messaggi</string>
+  <string name="MESSAGES_ADD_FACE_TIPS">Impostato con successo, verrà aggiunto alla faccia di controllo \"Gestione del viso\"</string>
+  <string name="MESSAGES_DELETE_FACE_BTN">Togliere la faccia</string>
+  <string name="MESSAGES_DELETE_FACE_MES">Elimina i volti ei messaggi</string>
+  <string name="MESSAGES_DELETE_FCAE_POP">Elimina il viso?</string>
+  <string name="MESSAGES_DELETE_ICON_BTN">Rimuova l\'icona</string>
+  <string name="MESSAGES_DELETE_ICON_MES">Elimina icona e messaggi</string>
+  <string name="MESSAGES_DELETE_ICON_POP">Eliminare l\'icona e tutti i messaggi correlati? Dopo l\'eliminazione, il messaggio in altre opzioni verrà eliminato</string>
+  <string name="MESSAGES_DELETE_POP">Eliminare il volto e tutti i messaggi correlati? Dopo l\'eliminazione, il messaggio in altre opzioni verrà eliminato</string>
+  <string name="MESSAGES_FACE_IDENTIFY">Identificare</string>
+  <string name="MESSAGES_FACE_INFO">Informazioni sulla faccia</string>
+  <string name="MESSAGES_FACE_MABAGE">Gestione del viso</string>
+  <string name="MESSAGES_FACE_MOVE">Sposta su un volto esistente</string>
+  <string name="MESSAGES_FACE_MOVE_BTN">passare a</string>
+  <string name="MESSAGES_FACE_NONE">Senza faccia</string>
+  <string name="MESSAGES_FILTER_ALL">Tutti</string>
+  <string name="MESSAGES_FILTER_STRANGER">Sconosciuto</string>
+  <string name="MESSAGES_IDENTIFY_ADD_BTN">Aggiungi al volto esistente</string>
+  <string name="MESSAGES_IDENTIFY_CREATE_BTN">Nuova faccia</string>
+  <string name="MESSAGES_IDENTIFY_POP">Nuova faccia, o aggiungendo a un volto esistente, migliora l\'esattezza del riconoscimento facciale</string>
+  <string name="MESSAGES_TIME_DAY">%s gior fa</string>
+  <string name="MESSAGES_TIME_HOUR">%s h fa</string>
+  <string name="MESSAGES_TIME_MIN">%s min fa</string>
   <string name="MINUTE">M</string>
   <string name="MINUTE_Cloud">minuti</string>
   <string name="MOBILE_DATA">rete dati mobile</string>
@@ -638,7 +660,7 @@
   <string name="SETTING_FREE">Usare tutti I rilevatori di movimento come default</string>
   <string name="SETTING_RECORD">Impostazioni video</string>
   <string name="SETTING_SD">Micro SD card</string>
-  <string name="SETTING_SECURE_AI">AI riconoscimento</string>
+  <string name="SETTING_SECURE_AI">Riconoscimento degli oggetti</string>
   <string name="SETTING_TIMEZONE">Time zone</string>
   <string name="SET_NEW_PWD">Impostare una nuova password</string>
   <string name="SET_PHOTO_FAIL">Non salvata</string>
@@ -1044,6 +1066,7 @@
   <string name="USER_NAME">Inserire Nome utente</string>
   <string name="USE_HELP">Aiuto</string>
   <string name="Unconnect_Network">Il tuo dispositivo non è connesso a una rete mobile oa una rete WiFi</string>
+  <string name="Unicam720_TIMEOUT_BANNER">Scarsa rete, la velocità dovrebbe essere almeno 40kb/s</string>
   <string name="VALID_STORAGE">Memoria libera</string>
   <string name="VIDEO_FirmwareUpdating">Aggiornamento firmware&#8230;</string>
   <string name="VIDEO_REFRESHING">Sto caricando</string>
@@ -1081,6 +1104,7 @@
   <string name="WIFI_SET_5GTIPS">Nota: il segnale WiFi 5Ghz non è ancora supportato</string>
   <string name="WIFI_SET_RS">Andare in \"Settings\"->\"WLAN\",scegliere \"RS-CAM-******\" collegare il telefono,password è 11111111</string>
   <string name="WIFI_SET_VER">Andare in \"Settings\"->\"WLAN\",scegliere \"%s\" collegare il telefono,password è 11111111</string>
+  <string name="WIRED_MODE_CONNECTED">Collegato</string>
   <string name="WONDER_TODAY_H_M">Oggi HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">Ieri HH:mm</string>
   <string name="WeChat">WeChat</string>
