--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -110,7 +110,7 @@
   <string name="DELETE_SURE">本当に削除しますか?</string>
   <string name="DELETE_THEME">位置削除</string>
   <string name="DELETE_THEME_XX">位置%sを削除しますか？</string>
-  <string name="DETECTED_AI">検出された</string>
+  <string name="DETECTED_AI">発見する</string>
   <string name="DEVICE">デバイス</string>
   <string name="DEVICES_TIPS_TEXT">ここに必要のステップは:\n1.デバイスをネットワークに接続させる\n2. CIDアカウントを登録して有効化する\n3.現在のアカウントとバインディングする</string>
   <string name="DEVICES_TITLE">デバイス追加</string>
@@ -396,6 +396,28 @@
   <string name="MAGNETISM_ON">オン</string>
   <string name="MAGNETISM_ON_PUSH">%sがオンにしました</string>
   <string name="MESSAGE">メッセージ</string>
+  <string name="MESSAGES_ADD_FACE_TIPS">正常に設定され、チェックフェースに追加されます。 \"顔管理\"</string>
+  <string name="MESSAGES_DELETE_FACE_BTN">顔を削除</string>
+  <string name="MESSAGES_DELETE_FACE_MES">顔やメッセージを削除する</string>
+  <string name="MESSAGES_DELETE_FCAE_POP">顔を削除しますか？</string>
+  <string name="MESSAGES_DELETE_ICON_BTN">アイコンを削除</string>
+  <string name="MESSAGES_DELETE_ICON_MES">アイコンとメッセージを削除する</string>
+  <string name="MESSAGES_DELETE_ICON_POP">アイコンと関連するすべてのメッセージを削除しますか？ 削除後、他のオプションの下のメッセージも削除されます</string>
+  <string name="MESSAGES_DELETE_POP">顔と関連するすべてのメッセージを削除しますか？ 削除後、他のオプションの下のメッセージも削除されます</string>
+  <string name="MESSAGES_FACE_IDENTIFY">識別する</string>
+  <string name="MESSAGES_FACE_INFO">顔情報</string>
+  <string name="MESSAGES_FACE_MABAGE">顔管理</string>
+  <string name="MESSAGES_FACE_MOVE">既存の顔に移動する</string>
+  <string name="MESSAGES_FACE_MOVE_BTN">へ引っ越す</string>
+  <string name="MESSAGES_FACE_NONE">顔なし</string>
+  <string name="MESSAGES_FILTER_ALL">すべて</string>
+  <string name="MESSAGES_FILTER_STRANGER">見知らぬ人</string>
+  <string name="MESSAGES_IDENTIFY_ADD_BTN">既存の顔に追加する</string>
+  <string name="MESSAGES_IDENTIFY_CREATE_BTN">新顔</string>
+  <string name="MESSAGES_IDENTIFY_POP">新しい顔、または既存の顔に追加することで、顔認識の精度を向上させる</string>
+  <string name="MESSAGES_TIME_DAY">%s日前</string>
+  <string name="MESSAGES_TIME_HOUR">%s時間前</string>
+  <string name="MESSAGES_TIME_MIN">%s分前</string>
   <string name="MINUTE">分</string>
   <string name="MINUTE_Cloud">分</string>
   <string name="MOBILE_DATA">モバイルデータネットワーク</string>
@@ -638,7 +660,7 @@
   <string name="SETTING_FREE">デバイスの移動検出および警報を自由にカスタマイズする</string>
   <string name="SETTING_RECORD">ビデオ設定</string>
   <string name="SETTING_SD">Micro SDカード</string>
-  <string name="SETTING_SECURE_AI">AI認識</string>
+  <string name="SETTING_SECURE_AI">オブジェクト認識</string>
   <string name="SETTING_TIMEZONE">デバイスタイムゾーン</string>
   <string name="SET_NEW_PWD">新しいパスワードを設定する</string>
   <string name="SET_PHOTO_FAIL">アイコンの設定ができませんでした</string>
@@ -1044,6 +1066,7 @@
   <string name="USER_NAME">ニックネームを入力してください</string>
   <string name="USE_HELP">ヘルプ</string>
   <string name="Unconnect_Network">お使いの端末はモバイルネットワークまたはWiFiネットワークに接続されていません</string>
+  <string name="Unicam720_TIMEOUT_BANNER">接続が遅い、再試行してください</string>
   <string name="VALID_STORAGE">ストレージ容量</string>
   <string name="VIDEO_FirmwareUpdating">ファームウェアのアップデート&#8230;</string>
   <string name="VIDEO_REFRESHING">アップロード中、お待ちください</string>
@@ -1081,6 +1104,7 @@
   <string name="WIFI_SET_5GTIPS">注意：ただいま5GHz式のWiFi電波が適用されません</string>
   <string name="WIFI_SET_RS">システム設定-> WiFiにRS-CAM -******を選択し追加してください,パスワード11111111</string>
   <string name="WIFI_SET_VER">システム設定-> WiFiに %s を選択し追加してください,パスワード11111111</string>
+  <string name="WIRED_MODE_CONNECTED">接続済み</string>
   <string name="WONDER_TODAY_H_M">今日 HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">昨日 HH:mm</string>
   <string name="WeChat">WeChat</string>
