--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -110,7 +110,7 @@
   <string name="DELETE_SURE">Tem certeza que deseja excluir?</string>
   <string name="DELETE_THEME">Remover localização</string>
   <string name="DELETE_THEME_XX">Apagar a localização %s ?</string>
-  <string name="DETECTED_AI">Detectou</string>
+  <string name="DETECTED_AI">Descobrir</string>
   <string name="DEVICE">Dispositivo</string>
   <string name="DEVICES_TIPS_TEXT">Etapas do processo:\n1. Conectar o dispositivo à rede\n2. Registrar e ativar a conta\n3. Vincular dispositivo à conta</string>
   <string name="DEVICES_TITLE">Adicionar dispositivo</string>
@@ -396,6 +396,28 @@
   <string name="MAGNETISM_ON">Abrir</string>
   <string name="MAGNETISM_ON_PUSH">%s foi aberto</string>
   <string name="MESSAGE">Mensagens</string>
+  <string name="MESSAGES_ADD_FACE_TIPS">Definida com sucesso, ele será adicionado à verificação face \"Gestão Face\"</string>
+  <string name="MESSAGES_DELETE_FACE_BTN">Remova o rosto</string>
+  <string name="MESSAGES_DELETE_FACE_MES">Excluir rosto e mensagens</string>
+  <string name="MESSAGES_DELETE_FCAE_POP">Apague o rosto?</string>
+  <string name="MESSAGES_DELETE_ICON_BTN">Remover ícone</string>
+  <string name="MESSAGES_DELETE_ICON_MES">Apagar ícone e mensagens</string>
+  <string name="MESSAGES_DELETE_ICON_POP">Apague o ícone e todas as mensagens relacionadas? Depois de excluída, a mensagem em outras opções também será excluída</string>
+  <string name="MESSAGES_DELETE_POP">Apague o rosto e todas as mensagens relacionadas? Depois de excluída, a mensagem em outras opções também será excluída</string>
+  <string name="MESSAGES_FACE_IDENTIFY">Identificar</string>
+  <string name="MESSAGES_FACE_INFO">Informação do rosto</string>
+  <string name="MESSAGES_FACE_MABAGE">Gestão Face</string>
+  <string name="MESSAGES_FACE_MOVE">Mover para um rosto existente</string>
+  <string name="MESSAGES_FACE_MOVE_BTN">mover para</string>
+  <string name="MESSAGES_FACE_NONE">Sem rosto</string>
+  <string name="MESSAGES_FILTER_ALL">Todos</string>
+  <string name="MESSAGES_FILTER_STRANGER">Estranho</string>
+  <string name="MESSAGES_IDENTIFY_ADD_BTN">Adicionar ao rosto existente</string>
+  <string name="MESSAGES_IDENTIFY_CREATE_BTN">Nova face</string>
+  <string name="MESSAGES_IDENTIFY_POP">Novo rosto, ou adicionando a um rosto existente, melhore a precisão do reconhecimento facial</string>
+  <string name="MESSAGES_TIME_DAY">há %s dia</string>
+  <string name="MESSAGES_TIME_HOUR">há %s h</string>
+  <string name="MESSAGES_TIME_MIN">há %s min</string>
   <string name="MINUTE">M</string>
   <string name="MINUTE_Cloud">min</string>
   <string name="MOBILE_DATA">rede de dados móveis</string>
@@ -638,7 +660,7 @@
   <string name="SETTING_FREE">Ajustar sensor de movimento e alertas de cada dispositivo</string>
   <string name="SETTING_RECORD">Configurações de vídeo</string>
   <string name="SETTING_SD">Cartão microSD</string>
-  <string name="SETTING_SECURE_AI">Reconhecimento AI</string>
+  <string name="SETTING_SECURE_AI">Reconhecimento de objetos</string>
   <string name="SETTING_TIMEZONE">Fuso horário</string>
   <string name="SET_NEW_PWD">Definir nova senha</string>
   <string name="SET_PHOTO_FAIL">Falha ao enviar imagem</string>
@@ -1044,6 +1066,7 @@
   <string name="USER_NAME">Digite um apelido</string>
   <string name="USE_HELP">Ajuda</string>
   <string name="Unconnect_Network">Seu dispositivo não está conectado a uma rede móvel ou a uma rede WiFi</string>
+  <string name="Unicam720_TIMEOUT_BANNER">Pobre rede, a velocidade deve ser 40kb/s, pelo menos</string>
   <string name="VALID_STORAGE">Armazenamento</string>
   <string name="VIDEO_FirmwareUpdating">Atualização de Firmware&#8230;</string>
   <string name="VIDEO_REFRESHING">Carregando. Por favor aguarde&#8230;</string>
@@ -1081,6 +1104,7 @@
   <string name="WIFI_SET_5GTIPS">Nota:WiFi em 5GHz não é suportado</string>
   <string name="WIFI_SET_RS">Por favor, selecione \"RS-CAM******\" na definições de WiFi. Se precisar de senha, digite 11111111</string>
   <string name="WIFI_SET_VER">Por favor, selecione \"%s\" na definições de WiFi. Se precisar de senha, digite 11111111</string>
+  <string name="WIRED_MODE_CONNECTED">Conectado</string>
   <string name="WONDER_TODAY_H_M">Hoje HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">Ontem HH:mm</string>
   <string name="WeChat">WeChat</string>
