--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -110,7 +110,7 @@
   <string name="DELETE_SURE">Уверены что хотите удалить?</string>
   <string name="DELETE_THEME">Удалить</string>
   <string name="DELETE_THEME_XX">Вы уверены, что хотите удалить %s ?</string>
-  <string name="DETECTED_AI">Обнаружен</string>
+  <string name="DETECTED_AI">Обнаружить</string>
   <string name="DEVICE">устройство</string>
   <string name="DEVICES_TIPS_TEXT">Этот процесс требует:\n1.Устройство, подключенное к сети\n2.Регистрация и активация CID\n3.Привязки с данного аккаунта </string>
   <string name="DEVICES_TITLE">Добавить устройство</string>
@@ -396,6 +396,28 @@
   <string name="MAGNETISM_ON">Открыто</string>
   <string name="MAGNETISM_ON_PUSH">%s открыт</string>
   <string name="MESSAGE">Сообщения</string>
+  <string name="MESSAGES_ADD_FACE_TIPS">Набор успешно, он будет добавлен к контрольному лицу \"управление Face\"</string>
+  <string name="MESSAGES_DELETE_FACE_BTN">Удалить лицо</string>
+  <string name="MESSAGES_DELETE_FACE_MES">Удалить лицо и сообщения</string>
+  <string name="MESSAGES_DELETE_FCAE_POP">Удалить лицо?</string>
+  <string name="MESSAGES_DELETE_ICON_BTN">Удалить значок</string>
+  <string name="MESSAGES_DELETE_ICON_MES">Удалить значок и сообщения</string>
+  <string name="MESSAGES_DELETE_ICON_POP">Удалить значок и все связанные с ним сообщения? После удаления сообщение в других вариантах также будет удалено</string>
+  <string name="MESSAGES_DELETE_POP">Удалить лицо и все связанные с ним сообщения? После удаления сообщение в других вариантах также будет удалено</string>
+  <string name="MESSAGES_FACE_IDENTIFY">Выявить</string>
+  <string name="MESSAGES_FACE_INFO">Лицо информация</string>
+  <string name="MESSAGES_FACE_MABAGE">управление Face</string>
+  <string name="MESSAGES_FACE_MOVE">Переход к существующему лицу</string>
+  <string name="MESSAGES_FACE_MOVE_BTN">переехать в</string>
+  <string name="MESSAGES_FACE_NONE">Без лица</string>
+  <string name="MESSAGES_FILTER_ALL">Все</string>
+  <string name="MESSAGES_FILTER_STRANGER">Незнакомец</string>
+  <string name="MESSAGES_IDENTIFY_ADD_BTN">Добавить к существующему лицу</string>
+  <string name="MESSAGES_IDENTIFY_CREATE_BTN">Новое лицо</string>
+  <string name="MESSAGES_IDENTIFY_POP">Новое лицо или добавление к существующему лицу улучшает точность распознавания лица</string>
+  <string name="MESSAGES_TIME_DAY">%s день назад</string>
+  <string name="MESSAGES_TIME_HOUR">%s час назад</string>
+  <string name="MESSAGES_TIME_MIN">%s мин назад</string>
   <string name="MINUTE">M</string>
   <string name="MINUTE_Cloud">минута</string>
   <string name="MOBILE_DATA">Мобильная сеть передачи данных</string>
@@ -638,7 +660,7 @@
   <string name="SETTING_FREE">Установить обнаружение движения и сигнализацию</string>
   <string name="SETTING_RECORD">Настройки видео</string>
   <string name="SETTING_SD">Карта microSD</string>
-  <string name="SETTING_SECURE_AI">Распознавание ИИ</string>
+  <string name="SETTING_SECURE_AI">Распознавание объектов</string>
   <string name="SETTING_TIMEZONE">Часовой пояс</string>
   <string name="SET_NEW_PWD">Установить новый пароль</string>
   <string name="SET_PHOTO_FAIL">Загрузка иконки не получилась</string>
@@ -1044,6 +1066,7 @@
   <string name="USER_NAME">Имя пользователя</string>
   <string name="USE_HELP">Помощь</string>
   <string name="Unconnect_Network">Ваше устройство не подключено к мобильной сети или сети WiFi</string>
+  <string name="Unicam720_TIMEOUT_BANNER">Плохая сеть, скорость должна быть не менее 40 кб/с</string>
   <string name="VALID_STORAGE">Объём памяти</string>
   <string name="VIDEO_FirmwareUpdating">Обновление прошивки&#8230;</string>
   <string name="VIDEO_REFRESHING">Идет загрузка, пожалуйста подождите</string>
@@ -1081,6 +1104,7 @@
   <string name="WIFI_SET_5GTIPS">Примечание:5ГГц WiFi сигнал не включен сейчас</string>
   <string name="WIFI_SET_RS">Зайдите в телефоне в настройки->сети WLAN, выберите \"RS-CAM******\", подключиться. Пароль:11111111</string>
   <string name="WIFI_SET_VER">Зайдите в телефоне в настройки->сети WLAN, выберите \"%s\", подключиться. Пароль:11111111</string>
+  <string name="WIRED_MODE_CONNECTED">Связанный</string>
   <string name="WONDER_TODAY_H_M">Сегодня HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">Вчера HH:mm</string>
   <string name="WeChat">WeChat</string>
