--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -110,7 +110,7 @@
   <string name="DELETE_SURE">Silmek istediğinizden emin misiniz?</string>
   <string name="DELETE_THEME">Sil</string>
   <string name="DELETE_THEME_XX">%s ı silmek istediğinizden emin misiniz ?</string>
-  <string name="DETECTED_AI">Algılanan</string>
+  <string name="DETECTED_AI">keşfedin</string>
   <string name="DEVICE">Cihaz</string>
   <string name="DEVICES_TIPS_TEXT">Bu işlem şunları gerektirir:\n1. Ağa bağlı cihaz\n2.CID yi kaydet ve aktifleştir\n3.Mevcut hesap bağlantısı</string>
   <string name="DEVICES_TITLE">Cihaz ekle</string>
@@ -396,6 +396,28 @@
   <string name="MAGNETISM_ON">Açık</string>
   <string name="MAGNETISM_ON_PUSH">%s Açık</string>
   <string name="MESSAGE">Mesajlar</string>
+  <string name="MESSAGES_ADD_FACE_TIPS">Başarıyla ayarlayın, kontrol yüzüne \"Yüz yönetimi\" eklenecektir.</string>
+  <string name="MESSAGES_DELETE_FACE_BTN">Yüzü kaldır</string>
+  <string name="MESSAGES_DELETE_FACE_MES">Yüzü ve mesajları sil</string>
+  <string name="MESSAGES_DELETE_FCAE_POP">Yüzü silinsin mi?</string>
+  <string name="MESSAGES_DELETE_ICON_BTN">Simgesini kaldır</string>
+  <string name="MESSAGES_DELETE_ICON_MES">Simgeyi ve mesajları sil</string>
+  <string name="MESSAGES_DELETE_ICON_POP">Simgeyi ve ilgili tüm mesajları silinsin mi? Silindikten sonra, diğer seçeneklerin altındaki mesajlar da silinir</string>
+  <string name="MESSAGES_DELETE_POP">Yüzü ve ilgili tüm mesajları silinsin mi? Silindikten sonra, diğer seçeneklerin altındaki mesajlar da silinir</string>
+  <string name="MESSAGES_FACE_IDENTIFY">belirlemek</string>
+  <string name="MESSAGES_FACE_INFO">Yüz bilgilerini</string>
+  <string name="MESSAGES_FACE_MABAGE">Yüz yönetimi</string>
+  <string name="MESSAGES_FACE_MOVE">Mevcut bir yüze taşı</string>
+  <string name="MESSAGES_FACE_MOVE_BTN">taşınmak</string>
+  <string name="MESSAGES_FACE_NONE">Yüzsüz</string>
+  <string name="MESSAGES_FILTER_ALL">Herşey</string>
+  <string name="MESSAGES_FILTER_STRANGER">Yabancı</string>
+  <string name="MESSAGES_IDENTIFY_ADD_BTN">Mevcut yüz ekle</string>
+  <string name="MESSAGES_IDENTIFY_CREATE_BTN">Yeni yüz</string>
+  <string name="MESSAGES_IDENTIFY_POP">Yeni yüz veya mevcut bir yüze ekleyerek, yüz tanımanın doğruluğunu artırın</string>
+  <string name="MESSAGES_TIME_DAY">%s gün önce</string>
+  <string name="MESSAGES_TIME_HOUR">%s sa. önce</string>
+  <string name="MESSAGES_TIME_MIN">%s dk. önce</string>
   <string name="MINUTE">D</string>
   <string name="MINUTE_Cloud">dakika</string>
   <string name="MOBILE_DATA">Mobil veri ağı</string>
@@ -638,7 +660,7 @@
   <string name="SETTING_FREE">Kişisel cihazın alarm ve hareket algılamasını ayarlayın</string>
   <string name="SETTING_RECORD">Video ayarları</string>
   <string name="SETTING_SD">Mikro SD kart</string>
-  <string name="SETTING_SECURE_AI">AI tanıma</string>
+  <string name="SETTING_SECURE_AI">Nesne tanıma</string>
   <string name="SETTING_TIMEZONE">Zaman bölgesi</string>
   <string name="SET_NEW_PWD">Yeni şifre kur</string>
   <string name="SET_PHOTO_FAIL">Yükleme başarısız</string>
@@ -1044,6 +1066,7 @@
   <string name="USER_NAME">Kullanıcı adı</string>
   <string name="USE_HELP">Yardım</string>
   <string name="Unconnect_Network">Cihazınız bir mobil şebekeye veya bir Kablosuz ağa bağlı değil</string>
+  <string name="Unicam720_TIMEOUT_BANNER">Kötü şebeke, hız en az 40kb/s olmalıdır</string>
   <string name="VALID_STORAGE">Geçerli depolama</string>
   <string name="VIDEO_FirmwareUpdating">Firmware güncellemesi&#8230;</string>
   <string name="VIDEO_REFRESHING">YÜKLENİYOR</string>
@@ -1081,6 +1104,7 @@
   <string name="WIFI_SET_5GTIPS">İpuçları:5Ghz WiFi sinyali şu an izinsiz</string>
   <string name="WIFI_SET_RS">Lütfen Ayarlamalar->WLAN aracaılığıyla RS-CAM-****** yi seçin, phone\'nuzdan katılın, şifre 11111111</string>
   <string name="WIFI_SET_VER">Lütfen Ayarlamalar->WLAN aracaılığıyla %s yi seçin, phone\'nuzdan katılın, şifre 11111111</string>
+  <string name="WIRED_MODE_CONNECTED">bağlantılı</string>
   <string name="WONDER_TODAY_H_M">Bugün HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">Dün HH:mm</string>
   <string name="WeChat">WeChat</string>
