--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -110,7 +110,7 @@
   <string name="DELETE_SURE">Bạn muốn xoá?</string>
   <string name="DELETE_THEME">Xoá</string>
   <string name="DELETE_THEME_XX">Bạn muốn xoá %s ?</string>
-  <string name="DETECTED_AI">Phát hiện</string>
+  <string name="DETECTED_AI">Khám phá</string>
   <string name="DEVICE">Thiết bị</string>
   <string name="DEVICES_TIPS_TEXT">Quá trình:\n1. Thiết bị kết nối Internet \n2.Đăng ký kích hoạt CID \n3. Gắn vào tài khoản</string>
   <string name="DEVICES_TITLE">Thêm thiết bị</string>
@@ -396,6 +396,28 @@
   <string name="MAGNETISM_ON">Mở</string>
   <string name="MAGNETISM_ON_PUSH">%s mở</string>
   <string name="MESSAGE">Tin nhắn</string>
+  <string name="MESSAGES_ADD_FACE_TIPS">Thiết lập thành công, nó sẽ được thêm vào mặt kiểm tra \"Quản lý khuôn mặt\"</string>
+  <string name="MESSAGES_DELETE_FACE_BTN">Xóa khuôn mặt</string>
+  <string name="MESSAGES_DELETE_FACE_MES">Xóa khuôn mặt và tin nhắn</string>
+  <string name="MESSAGES_DELETE_FCAE_POP">Xóa khuôn mặt?</string>
+  <string name="MESSAGES_DELETE_ICON_BTN">Xóa biểu tượng</string>
+  <string name="MESSAGES_DELETE_ICON_MES">Xóa biểu tượng và thư</string>
+  <string name="MESSAGES_DELETE_ICON_POP">Xóa biểu tượng và tất cả các thư liên quan? Sau khi xóa, thư theo các tùy chọn khác cũng sẽ bị xóa</string>
+  <string name="MESSAGES_DELETE_POP">Xóa khuôn mặt và tất cả các tin nhắn có liên quan? Sau khi xóa, thư theo các tùy chọn khác cũng sẽ bị xóa</string>
+  <string name="MESSAGES_FACE_IDENTIFY">Nhận định</string>
+  <string name="MESSAGES_FACE_INFO">Thông tin khuôn mặt</string>
+  <string name="MESSAGES_FACE_MABAGE">Quản lý khuôn mặt</string>
+  <string name="MESSAGES_FACE_MOVE">Di chuyển đến khuôn mặt hiện tại</string>
+  <string name="MESSAGES_FACE_MOVE_BTN">chuyển tới</string>
+  <string name="MESSAGES_FACE_NONE">Không có mặt</string>
+  <string name="MESSAGES_FILTER_ALL">Tất cả các</string>
+  <string name="MESSAGES_FILTER_STRANGER">Lạ</string>
+  <string name="MESSAGES_IDENTIFY_ADD_BTN">Thêm vào khuôn mặt hiện tại</string>
+  <string name="MESSAGES_IDENTIFY_CREATE_BTN">Gương mặt mới</string>
+  <string name="MESSAGES_IDENTIFY_POP">Khuôn mặt mới, hoặc bằng cách thêm vào khuôn mặt hiện tại, nâng cao độ chính xác của nhận dạng khuôn mặt</string>
+  <string name="MESSAGES_TIME_DAY">%s ngày trước</string>
+  <string name="MESSAGES_TIME_HOUR">%s giờ trước</string>
+  <string name="MESSAGES_TIME_MIN">%s phút trước</string>
   <string name="MINUTE">M</string>
   <string name="MINUTE_Cloud">Phút</string>
   <string name="MOBILE_DATA">mạng dữ liệu di động</string>
@@ -638,7 +660,7 @@
   <string name="SETTING_FREE">Cài phát hiện chuyển động và báo động của thiết bị</string>
   <string name="SETTING_RECORD">Cài đặt video</string>
   <string name="SETTING_SD">Thẻ nhớ Micro SD</string>
-  <string name="SETTING_SECURE_AI">Nhận dạng AI</string>
+  <string name="SETTING_SECURE_AI">Nhận diện đối tượng</string>
   <string name="SETTING_TIMEZONE">Vùng thời gian</string>
   <string name="SET_NEW_PWD">Cài mật khẩu mới</string>
   <string name="SET_PHOTO_FAIL">Tải lỗi</string>
@@ -1044,6 +1066,7 @@
   <string name="USER_NAME">Tên người dùng</string>
   <string name="USE_HELP">Trợ giúp</string>
   <string name="Unconnect_Network">Thiết bị của bạn không được kết nối với mạng di động hoặc mạng WiFi</string>
+  <string name="Unicam720_TIMEOUT_BANNER">Mạng kém, tốc độ phải là 40kb/s ít nhất</string>
   <string name="VALID_STORAGE">Có bộ nhớ lưu trữ</string>
   <string name="VIDEO_FirmwareUpdating">Cập nhật firmware&#8230;</string>
   <string name="VIDEO_REFRESHING">ĐANG TẢI</string>
@@ -1081,6 +1104,7 @@
   <string name="WIFI_SET_5GTIPS">Lưu ý:5G WiFi chưa được bật</string>
   <string name="WIFI_SET_RS">Trong mục \"Cài đặt\"->\"WLAN\", chọn \"RS-CAM-*****\" kết nối iPhone, Mật khẩu 11111111</string>
   <string name="WIFI_SET_VER">Trong mục \"Cài đặt\"->\"WLAN\", chọn \"%s\" kết nối iPhone, Mật khẩu 11111111</string>
+  <string name="WIRED_MODE_CONNECTED">Đã kết nối</string>
   <string name="WONDER_TODAY_H_M">Hôm nay HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">Hôm qua HH:mm</string>
   <string name="WeChat">WeChat</string>
