--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -20,7 +20,7 @@
   <string name="AGREE">我已閱讀並同意：</string>
   <string name="AI_CAT">貓</string>
   <string name="AI_DOG">狗</string>
-  <string name="AI_HUMAN">人形</string>
+  <string name="AI_HUMAN">行人</string>
   <string name="AI_VEHICLE">車輛</string>
   <string name="ALARM">警示聲</string>
   <string name="ALERTS">警示聲</string>
@@ -110,7 +110,7 @@
   <string name="DELETE_SURE">確定要刪除嗎？</string>
   <string name="DELETE_THEME">刪除位置</string>
   <string name="DELETE_THEME_XX">確定刪除%s嗎？</string>
-  <string name="DETECTED_AI">檢測到</string>
+  <string name="DETECTED_AI">發現</string>
   <string name="DEVICE">設備</string>
   <string name="DEVICES_TIPS_TEXT">將完成以下步驟:\n1.設備連接到網路\n2.註冊並啟動CID\n3.與當前帳號綁定</string>
   <string name="DEVICES_TITLE">新增設備</string>
@@ -396,6 +396,28 @@
   <string name="MAGNETISM_ON">打開</string>
   <string name="MAGNETISM_ON_PUSH">%s被打開了</string>
   <string name="MESSAGE">訊息中心</string>
+  <string name="MESSAGES_ADD_FACE_TIPS">設置成功後，將存至所勾選面孔的“面孔管理”</string>
+  <string name="MESSAGES_DELETE_FACE_BTN">僅刪除面孔</string>
+  <string name="MESSAGES_DELETE_FACE_MES">刪除面孔和消息</string>
+  <string name="MESSAGES_DELETE_FCAE_POP">是否刪除面孔？</string>
+  <string name="MESSAGES_DELETE_ICON_BTN">僅刪除圖標</string>
+  <string name="MESSAGES_DELETE_ICON_MES">刪除圖標和消息</string>
+  <string name="MESSAGES_DELETE_ICON_POP">是否刪除該圖標及其所有消息？刪除消息後，其他篩選項下有該消息也將被刪除</string>
+  <string name="MESSAGES_DELETE_POP">是否刪除該面孔及其所有消息？刪除消息後，其他篩選項下有該消息也將被刪除</string>
+  <string name="MESSAGES_FACE_IDENTIFY">識別</string>
+  <string name="MESSAGES_FACE_INFO">面孔信息</string>
+  <string name="MESSAGES_FACE_MABAGE">面孔管理</string>
+  <string name="MESSAGES_FACE_MOVE">移動到現有面孔</string>
+  <string name="MESSAGES_FACE_MOVE_BTN">移動到</string>
+  <string name="MESSAGES_FACE_NONE">暫無面孔</string>
+  <string name="MESSAGES_FILTER_ALL">全部</string>
+  <string name="MESSAGES_FILTER_STRANGER">陌生人</string>
+  <string name="MESSAGES_IDENTIFY_ADD_BTN">添加到現有面孔</string>
+  <string name="MESSAGES_IDENTIFY_CREATE_BTN">新建面孔</string>
+  <string name="MESSAGES_IDENTIFY_POP">可通過新建面孔或添加到現有面孔，提高面孔識別的準確率</string>
+  <string name="MESSAGES_TIME_DAY">%s天前</string>
+  <string name="MESSAGES_TIME_HOUR">%s小時前</string>
+  <string name="MESSAGES_TIME_MIN">%s分鐘前</string>
   <string name="MINUTE">分</string>
   <string name="MINUTE_Cloud">分鐘</string>
   <string name="MOBILE_DATA">移動數據網路</string>
@@ -638,7 +660,7 @@
   <string name="SETTING_FREE">自行設定單個設備的位移偵測及警示</string>
   <string name="SETTING_RECORD">錄像設置</string>
   <string name="SETTING_SD">Micro SD卡</string>
-  <string name="SETTING_SECURE_AI">AI識別</string>
+  <string name="SETTING_SECURE_AI">物體識別</string>
   <string name="SETTING_TIMEZONE">設備時區</string>
   <string name="SET_NEW_PWD">設定新密碼</string>
   <string name="SET_PHOTO_FAIL">檔案照片設定失敗</string>
@@ -1044,6 +1066,7 @@
   <string name="USER_NAME">請輸入暱稱</string>
   <string name="USE_HELP">操作助理</string>
   <string name="Unconnect_Network">您的設備未連接移動網絡，或WiFi網絡</string>
+  <string name="Unicam720_TIMEOUT_BANNER">網絡較差，上傳速度需高於40kb/s</string>
   <string name="VALID_STORAGE">儲存空間</string>
   <string name="VIDEO_FirmwareUpdating">固件更新中&#8230;</string>
   <string name="VIDEO_REFRESHING">正在載入，請稍後</string>
@@ -1081,6 +1104,7 @@
   <string name="WIFI_SET_5GTIPS">注：暫不支持5GHz的WiFi信號</string>
   <string name="WIFI_SET_RS">請在系統設置->無線區域網，選擇“RS-CAM-******”加入，密碼8個1</string>
   <string name="WIFI_SET_VER">請在系統設置->無線區域網，選擇“%s”加入，密碼8個1</string>
+  <string name="WIRED_MODE_CONNECTED">已連接</string>
   <string name="WONDER_TODAY_H_M">今日 HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">昨日 HH:mm</string>
   <string name="WeChat">微信</string>
