--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,7 +110,7 @@
   <string name="DELETE_SURE">Sure to delete all messages?</string>
   <string name="DELETE_THEME">Delete</string>
   <string name="DELETE_THEME_XX">Are you sure to delete %s ?</string>
-  <string name="DETECTED_AI">Detected</string>
+  <string name="DETECTED_AI">Discover</string>
   <string name="DEVICE">Device</string>
   <string name="DEVICES_TIPS_TEXT">This process requires:\n1.Your device is connected to your WIFI network\n2.A Registered and Active Account\n3.With the current account bound</string>
   <string name="DEVICES_TITLE">Add Device</string>
@@ -396,6 +396,28 @@
   <string name="MAGNETISM_ON">On</string>
   <string name="MAGNETISM_ON_PUSH">%s is opened</string>
   <string name="MESSAGE">Messages</string>
+  <string name="MESSAGES_ADD_FACE_TIPS">Set successfully, it will be added to the check face \"Face management\"</string>
+  <string name="MESSAGES_DELETE_FACE_BTN">Remove face</string>
+  <string name="MESSAGES_DELETE_FACE_MES">Delete face and messages</string>
+  <string name="MESSAGES_DELETE_FCAE_POP">Delete the face？</string>
+  <string name="MESSAGES_DELETE_ICON_BTN">Remove icon</string>
+  <string name="MESSAGES_DELETE_ICON_MES">Delete icon and messages</string>
+  <string name="MESSAGES_DELETE_ICON_POP">Delete the icon and all related messages? After deleted, the message under other options will also be deleted</string>
+  <string name="MESSAGES_DELETE_POP">Delete the face and all related messages? After deleted, the message under other options will also be deleted</string>
+  <string name="MESSAGES_FACE_IDENTIFY">Identify</string>
+  <string name="MESSAGES_FACE_INFO">Face information</string>
+  <string name="MESSAGES_FACE_MABAGE">Face management</string>
+  <string name="MESSAGES_FACE_MOVE">Move to an existing face</string>
+  <string name="MESSAGES_FACE_MOVE_BTN">move to</string>
+  <string name="MESSAGES_FACE_NONE">No face</string>
+  <string name="MESSAGES_FILTER_ALL">All</string>
+  <string name="MESSAGES_FILTER_STRANGER">Stranger</string>
+  <string name="MESSAGES_IDENTIFY_ADD_BTN">Add to existing face</string>
+  <string name="MESSAGES_IDENTIFY_CREATE_BTN">New face</string>
+  <string name="MESSAGES_IDENTIFY_POP">New face, or by adding to an existing face, improve the accuracy of face recognition</string>
+  <string name="MESSAGES_TIME_DAY">%sd ago</string>
+  <string name="MESSAGES_TIME_HOUR">%sh ago</string>
+  <string name="MESSAGES_TIME_MIN">%sm ago</string>
   <string name="MINUTE">M</string>
   <string name="MINUTE_Cloud">min</string>
   <string name="MOBILE_DATA">Mobile data network</string>
@@ -638,7 +660,7 @@
   <string name="SETTING_FREE">Set alarm and motion detector of individual device</string>
   <string name="SETTING_RECORD">Video settings</string>
   <string name="SETTING_SD">Micro SD card</string>
-  <string name="SETTING_SECURE_AI">AI recognition</string>
+  <string name="SETTING_SECURE_AI">Object recognition</string>
   <string name="SETTING_TIMEZONE">Time zone</string>
   <string name="SET_NEW_PWD">Set new password</string>
   <string name="SET_PHOTO_FAIL">Failed to upload</string>
@@ -1044,6 +1066,7 @@
   <string name="USER_NAME">Enter nickname</string>
   <string name="USE_HELP">Help</string>
   <string name="Unconnect_Network">Your device is not connected to a mobile network, or a WiFi network</string>
+  <string name="Unicam720_TIMEOUT_BANNER">Poor network, speed should be 40kb/s at least</string>
   <string name="VALID_STORAGE">Valid storage</string>
   <string name="VIDEO_FirmwareUpdating">Firmware updating&#8230;</string>
   <string name="VIDEO_REFRESHING">LOADING</string>
@@ -1081,6 +1104,7 @@
   <string name="WIFI_SET_5GTIPS">Note: This device does not support 5G WIFI currently</string>
   <string name="WIFI_SET_RS">Please via \"Settings\"->\"WLAN\", choose \"RS-CAM-******\" join on your phone, password 11111111</string>
   <string name="WIFI_SET_VER">Please via \"Settings\"->\"WLAN\", choose \"%s\" join on your phone, password 11111111</string>
+  <string name="WIRED_MODE_CONNECTED">Connected</string>
   <string name="WONDER_TODAY_H_M">Today HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">Yesterday HH:mm</string>
   <string name="WeChat">WeChat</string>
