--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -20,7 +20,7 @@
   <string name="AGREE">点击按钮，表示您已同意</string>
   <string name="AI_CAT">猫</string>
   <string name="AI_DOG">狗</string>
-  <string name="AI_HUMAN">人形</string>
+  <string name="AI_HUMAN">行人</string>
   <string name="AI_VEHICLE">车辆</string>
   <string name="ALARM">警报声</string>
   <string name="ALERTS">警报声</string>
@@ -110,7 +110,7 @@
   <string name="DELETE_SURE">确定删除该设备的所有消息？</string>
   <string name="DELETE_THEME">删除位置</string>
   <string name="DELETE_THEME_XX">确定删除位置“%s”吗？</string>
-  <string name="DETECTED_AI">检测到</string>
+  <string name="DETECTED_AI">发现</string>
   <string name="DEVICE">设备</string>
   <string name="DEVICES_TIPS_TEXT">将完成以下步骤：\n1.设备连接到网络\n2.注册并激活CID\n3.与当前账号绑定</string>
   <string name="DEVICES_TITLE">添加设备</string>
@@ -396,6 +396,28 @@
   <string name="MAGNETISM_ON">打开</string>
   <string name="MAGNETISM_ON_PUSH">%s被打开了</string>
   <string name="MESSAGE">消息中心</string>
+  <string name="MESSAGES_ADD_FACE_TIPS">设置成功后，将存至所勾选面孔的“面孔管理”</string>
+  <string name="MESSAGES_DELETE_FACE_BTN">仅删除面孔</string>
+  <string name="MESSAGES_DELETE_FACE_MES">删除面孔和消息</string>
+  <string name="MESSAGES_DELETE_FCAE_POP">是否删除面孔？</string>
+  <string name="MESSAGES_DELETE_ICON_BTN">仅删除图标</string>
+  <string name="MESSAGES_DELETE_ICON_MES">删除图标和消息</string>
+  <string name="MESSAGES_DELETE_ICON_POP">是否删除该图标及其所有消息？删除消息后，其他筛选项下有该消息也将被删除</string>
+  <string name="MESSAGES_DELETE_POP">是否删除该面孔及其所有消息？删除消息后，其他筛选项下有该消息也将被删除</string>
+  <string name="MESSAGES_FACE_IDENTIFY">识别</string>
+  <string name="MESSAGES_FACE_INFO">面孔信息</string>
+  <string name="MESSAGES_FACE_MABAGE">面孔管理</string>
+  <string name="MESSAGES_FACE_MOVE">移动到现有面孔</string>
+  <string name="MESSAGES_FACE_MOVE_BTN">移动到</string>
+  <string name="MESSAGES_FACE_NONE">暂无面孔</string>
+  <string name="MESSAGES_FILTER_ALL">全部</string>
+  <string name="MESSAGES_FILTER_STRANGER">陌生人</string>
+  <string name="MESSAGES_IDENTIFY_ADD_BTN">添加到现有面孔</string>
+  <string name="MESSAGES_IDENTIFY_CREATE_BTN">新建面孔</string>
+  <string name="MESSAGES_IDENTIFY_POP">可通过新建面孔或添加到现有面孔，提高面孔识别的准确率</string>
+  <string name="MESSAGES_TIME_DAY">%s天前</string>
+  <string name="MESSAGES_TIME_HOUR">%s小时前</string>
+  <string name="MESSAGES_TIME_MIN">%s分钟前</string>
   <string name="MINUTE">分</string>
   <string name="MINUTE_Cloud">分钟</string>
   <string name="MOBILE_DATA">移动数据网络</string>
@@ -638,7 +660,7 @@
   <string name="SETTING_FREE">随意设置单个设备的移动侦测及报警</string>
   <string name="SETTING_RECORD">录像设置</string>
   <string name="SETTING_SD">Micro SD卡</string>
-  <string name="SETTING_SECURE_AI">AI识别</string>
+  <string name="SETTING_SECURE_AI">物体识别</string>
   <string name="SETTING_TIMEZONE">设备时区</string>
   <string name="SET_NEW_PWD">设置新密码</string>
   <string name="SET_PHOTO_FAIL">头像设置失败</string>
@@ -1044,6 +1066,7 @@
   <string name="USER_NAME">请输入昵称</string>
   <string name="USE_HELP">使用帮助</string>
   <string name="Unconnect_Network">您的设备未连接移动网络，或WiFi网络</string>
+  <string name="Unicam720_TIMEOUT_BANNER">网络较差，请确保上传速度高于40kb/s</string>
   <string name="VALID_STORAGE">存储空间</string>
   <string name="VIDEO_FirmwareUpdating">固件升级中&#8230;</string>
   <string name="VIDEO_REFRESHING">正在加载，请稍后</string>
@@ -1081,6 +1104,7 @@
   <string name="WIFI_SET_5GTIPS">注：暂不支持5GHz的WiFi信号</string>
   <string name="WIFI_SET_RS">请在系统设置->无线局域网，选择“RS-CAM-******”加入，密码8个1</string>
   <string name="WIFI_SET_VER">请在系统设置->无线局域网，选择“%s”加入，密码8个1</string>
+  <string name="WIRED_MODE_CONNECTED">已连接</string>
   <string name="WONDER_TODAY_H_M">今天 HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">昨天 HH:mm</string>
   <string name="WeChat">微信</string>
